[package]
name = "kubesci"
version = "0.1.0"
authors = ["Jordan Holland <jordan.holland@rea-group.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
reqwest = { version = "0.10", features = ["json"] }
jsonwebtoken = "7"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
pretty_env_logger = "0.4"
kube = "0.34.0"
kube-derive = "0.34.0"
k8s-openapi = { version = "0.8.0", default-features = false, features = ["v1_17"] }
vec1 =  { version = "1.4.0", features = ["serde"] }
itertools = "0.9"
regex = "1"
either = "1.5"
futures = "0.3"
